# cpp-risk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  shell.nix
.github/workflows/: cmake.yml
drivers/: CMakeLists.txt  CardsDriver.cpp  Driver.cpp  GameEngineDriver.cpp  MapDriver.cpp  MapLoaderDriver.cpp  OrdersDriver.cpp  PlayerDriver.cpp
maps/: ameroki.map  debug.map  eurasien.map
maps/conquest/: Conquest Debug.map  France Provinces.map  Grand Montreal.txt  Hasbro's LOTR Risk.map  Hasbro's LOTR Trilogy.map  La Havana (1899).map
maps/domination/: debug.map
src/: CMakeLists.txt  main.cpp
src/cards/: Card.fwd.hpp  Card.h  Card.hpp  CardCollection.h  CardCollection.hpp  CardType.h  CardType.hpp  Cards.cpp  Cards.fwd.hpp  Cards.hpp  Deck.h  Deck.hpp  Hand.fwd.hpp  Hand.h  Hand.hpp  card.h  card_collection.h  deck.h  hand.h
src/drivers/: CardsDriver.cpp  MapDriver.cpp  MapLoaderDriver.cpp  OrdersDriver.cpp
src/entities/: Player.cpp  Player.h  Player.hpp  PlayerStrategies.cpp  PlayerStrategies.fwd.cpp  PlayerStrategies.hpp  player.h
src/game/: GameEngine.cpp  GameEngine.fwd.hpp  GameEngine.hpp  GameObservers.cpp  GameObservers.fwd.hpp  GameObservers.hpp
src/map/: Border.cpp  Border.fwd.hpp  Border.h  Border.hpp  Continent.cpp  Continent.fwd.hpp  Continent.h  Continent.hpp  Map.cpp  Map.fwd.hpp  Map.h  Map.hpp  MapLoader.cpp  MapLoader.h  MapLoader.hpp  MapNode.cpp  MapNode.fwd.hpp  MapNode.h  MapNode.hpp  Territory.cpp  Territory.fwd.hpp  Territory.h  Territory.hpp  border.h  continent.h  country.h  loader.h  map.h
src/mvc/: MVC.cpp  MVC.fwd.hpp  MVC.hpp  (+5 more)
(+31 files in other folders)
